# rawkuma-scraper

./: .gitignore  Cargo.toml  README.md
examples/: download.rs  export.rs  main.rs  manga.rs  search.rs
export_types/: types.ts
src/: client.rs  constant.rs  lib.rs  main.rs  parser.rs  types.rs
src/client/: mod.rs
src/enums/: manga.rs
src/enums/manga/: genre.rs  mod.rs  order.rs  status.rs  type.rs
src/enums/manga.html/: genre.html  order.html  status.html  type.html
src/parser/: chapter.rs  home.rs  manga.rs  manga_details.rs  mod.rs  search.rs
src/types/: bixbox.rs  bsx.rs  chapter.rs  chapterlist.rs  error.rs  genre_tag.rs  home.rs  manga.rs  mod.rs  reader_area.rs  search.rs  utao.rs
src/types/chapter/: mod.rs  ts_reader_args.rs
src/types/error/: mod.rs
src/types/home/: mod.rs
src/types/manga/: details.rs  list_paramed.rs  mod.rs
src/types/search/: mod.rs
