[package]
name = "rawkuma-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
url = { version = "2" }
scraper = "0.17.1"
tokio = { version = "1", features = ["rt", "sync", "rt-multi-thread", "macros"], optional = true}
derive_builder = "0.12"
serde = { version = "1", features = ["derive"], optional = true}
chrono = { version = "0.4", features = ["std"]}
async-trait = "0.1"
htmlize = { version = "1", features = ["unescape"] }
specta = { version = "1", features = ["chrono"], optional = true }
getset = { version = "0.1", optional = true }
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "sync", "rt-multi-thread", "macros"] }
jsonxf = "1.1.1"
specta = { version = "1", features = ["export"]}

[features]
default = ["specta"]
serde = ["dep:serde", "url/serde", "chrono/serde"]
specta = ["dep:specta", "serde"]
getset = ["dep:getset"]